# game_of_life

./: .cland-format  .clang-format  .gitignore  CMakeLists.txt  build.ps1  config.ps1  imgui.ini  run.ps1
.cache/clangd/index/: _mingw_dxhelper.h.DBCBC8464C70CB40.idx  context.c.5896988DD6816E56.idx  dinput.h.2FDDE683F0AA57A5.idx  egl_context.c.3379EDB439D43B5D.idx  glfw3.h.D2132A403F022AFB.idx  glfw3native.h.5675E9BB9E3E4D40.idx  imconfig.h.00672F9480C3800A.idx  imgui.cpp.2749251B8149F4CB.idx  imgui.h.DBB05672831445E4.idx  imgui_demo.cpp.AB136630C60F1A06.idx  imgui_draw.cpp.F3EB8B08CAD06F92.idx  imgui_impl_glfw.cpp.D3925FA396504FCD.idx  imgui_impl_glfw.h.11BAE4B7D371462C.idx  imgui_impl_opengl3.cpp.88B9762DA284C9DD.idx  imgui_impl_opengl3.h.3F2921FE450E133A.idx  imgui_impl_opengl3_loader.h.20A2923025727249.idx  imgui_internal.h.00313128820D5381.idx  imgui_tables.cpp.0C1BAC7F05CEA6CE.idx  imgui_widgets.cpp.F2A0EE142C049C39.idx  imstb_rectpack.h.61A89CBF336B032D.idx  imstb_textedit.h.567812ABA597F4DE.idx  imstb_truetype.h.F6BEF1C98690473D.idx  init.c.89F5D922404ECC3F.idx  input.c.CB77A38271EE2D21.idx  internal.h.078DAF86AA2EAEB8.idx  main.cpp.0A41EFFA897E8E00.idx  mappings.h.3E5A5E4E51795FCF.idx  monitor.c.4B5D7C4BD55A968C.idx  null_init.c.B4A30B911BA025A9.idx  null_joystick.c.B4825C2F119CCEAD.idx  null_joystick.h.C6583E3EACE5B5C3.idx  null_monitor.c.C1988807C3265DE4.idx  null_platform.h.386991618DF366E4.idx  null_window.c.B76FC49E978C58AA.idx  osmesa_context.c.E112854364D2134D.idx  platform.c.31B82645D0531791.idx  platform.h.A2F47526C4EEFCCB.idx  vulkan.c.10AA4A22D49327A5.idx  wgl_context.c.4791DDA614609A1A.idx  win32_init.c.37150A20EA9206EE.idx  (+12 more)
inc/: consts.h  gol.h
libs/glad/: glad.h
src/: glad.c  gol.cpp  main.cpp
